--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.14.1",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.11",
     "typescript": "5.1.6"
